NEW 245869
~NetworkStorageManager is run in the wrong thread in certain conditions
https://bugs.webkit.org/show_bug.cgi?id=245869
Summary ~NetworkStorageManager is run in the wrong thread in certain conditions
Kimmo Kinnunen
Reported 2022-09-30 01:53:06 PDT
~NetworkStorageManager would be run in the work queue in certain conditions
Attachments
Radar WebKit Bug Importer
Comment 1 2022-09-30 01:54:24 PDT
Kimmo Kinnunen
Comment 2 2022-09-30 03:35:48 PDT
Kimmo Kinnunen
Comment 3 2022-10-11 05:50:32 PDT
Note You need to log in before you can comment on or make changes to this bug.