~NetworkStorageManager is run in the wrong thread in certain conditions https://bugs.webkit.org/show_bug.cgi?id=245869 rdar://problem/100602521

Reviewed by NOBODY (OOPS!).

Short running tests would sometimes fail
ASSERT(!RunLoop::isMain()) during ~NetworkStorageManager().

This would happen when the NetworkStorageManager::close() would
be first called, invalidating the storage manager. Then
NetworkProcess::didClose() would call NetworkStorageManager::syncLocalStorage().

NetworkStorageManager was a ref counted class and close() was intended to
post the last shared ref back to the main thread, ensuring main thread destruction
when the real owning ref in NetworkSession::m_storageManager was lost.

However, posting the invalid syncLocalStorage() task after close() would put an
unexpected new ref to the work queue. This would mean that losing m_storageManager
ref was not losing the last ref.

Fix this by:
 - Make the NetworkStorageManager non-refcounted. It is really owned by NetworkSession.

Remove WeakPtr list allNetworkStorageManagers. It is not useful list, as each NetworkStorageManager
is accessible by iterating all network sessions.

This is part of the effort to fix some of the flakyness of tests invoking network storage, especially
API test flakyness.

The assert would fail on certain machines with:
Tools/Scripts/run-api-tests  TestWebKitAPI.WebKit.MigrateLocalStorageDataToGeneralStorageDirectory --repeat 100

Note: The assertion would not affect the success / failure of the test, at least typically.
It was invoked in sequence that typically ended with the XPC terminating the process during the assertion
backtrace print, so sometimes the partial backtrace was printed.

* Source/WebKit/NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::didClose):
* Source/WebKit/NetworkProcess/NetworkSession.cpp:
(WebKit::createNetworkStorageManager):
* Source/WebKit/NetworkProcess/NetworkSession.h:
(WebKit::NetworkSession::storageManager):
* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.cpp:
(WebKit::NetworkStorageManager::NetworkStorageManager):
(WebKit::NetworkStorageManager::~NetworkStorageManager):
(WebKit::NetworkStorageManager::close):
(WebKit::NetworkStorageManager::startReceivingMessageFromConnection):
(WebKit::NetworkStorageManager::stopReceivingMessageFromConnection):
(WebKit::NetworkStorageManager::clearStorageForTesting):
(WebKit::NetworkStorageManager::clearStorageForWebPage):
(WebKit::NetworkStorageManager::didIncreaseQuota):
(WebKit::NetworkStorageManager::fetchData):
(WebKit::NetworkStorageManager::deleteData):
(WebKit::NetworkStorageManager::deleteDataModifiedSince):
(WebKit::NetworkStorageManager::deleteDataForRegistrableDomains):
(WebKit::NetworkStorageManager::moveData):
(WebKit::NetworkStorageManager::getOriginDirectory):
(WebKit::NetworkStorageManager::suspend):
(WebKit::NetworkStorageManager::handleLowMemoryWarning):
(WebKit::NetworkStorageManager::syncLocalStorage):
(WebKit::NetworkStorageManager::registerTemporaryBlobFilePaths):
(WebKit::NetworkStorageManager::requestSpace):
(WebKit::NetworkStorageManager::resetQuotaForTesting):
(WebKit::NetworkStorageManager::resetQuotaUpdatedBasedOnUsageForTesting):
(WebKit::NetworkStorageManager::setBackupExclusionPeriodForTesting):
(WebKit::allNetworkStorageManagers): Deleted.
(WebKit::NetworkStorageManager::forEach): Deleted.
(WebKit::NetworkStorageManager::create): Deleted.
* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.h:
* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.messages.in: